Reporte completo de Mantenimiento

--- a/vehicle-maintenance-system/vms/views/vms_order_view.xml
+++ b/vehicle-maintenance-system/vms/views/vms_order_view.xml
@@ -84,6 +84,9 @@
                                 </tree>
                             </field>
                         </page>
+                        <page string="Compras">
+                            <field name="compras_ids"/>
+                        </page>
                     </notebook>
                 </sheet>
                 <div class="oe_chatter">
